# rust-wasm-firefox-extension

./: Cargo.toml  README.md  package.json  webpack.config.js
src/: app.rs
static/: index.html  manifest.json
