[package]
name = "rust-wasm-yew-firefox-plugin"
version = "0.2.0"
authors = ["Philipp Hoenisch <philipp@hoenisch.at"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
wasm-bindgen = "0.2.68"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.5", optional = true }
yew = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'KeyboardEvent',
]
